fixes for IE.  this works better on IE than before, but it's still not acceptable.  in particular the scrollbar won't show up if you specify padding for the dojoFloatingPaneClient. can't figure out why.  also, the tabs are too tall/wide.
git-svn-id: http://svn.dojotoolkit.org/src@3350 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/HtmlFloatingPane.css
+++ b/trunk/src/widget/templates/HtmlFloatingPane.css
@@ -83,7 +83,8 @@
 	
 	/* styling css */
 	background-color: ThreeDFace;
-	padding: 8px;
+	/*padding: 8px;	doesn't work!  can't figure out why */
 	font-family: Verdana, Helvetica, Garamond, sans-serif;
 	font-size: 12px;
+
 }
